Bug 1672269 - NextWord shouldn't return empty. r=jfkthame, a=pascal

After landing bug 425915, we use NextWord instead of BreakInBetween.
NextWord is possible to return empty string (offset equals to current
position). So it shouldn't return empty string.

Differential Revision: https://phabricator.services.mozilla.com/D94266