intl/lwbrk/gtest/TestLineBreak.cpp
@@ -252,6 +252,20 @@ void TestFindWordBreakFromPosition(uint32_t fragN, uint32_t offset,
       << "FindWordBreakFromPosition(" << fragN << ", " << offset << ")";
 }
 
+void TestNextWordBreakWithComplexLanguage() {
+  RefPtr<mozilla::intl::WordBreaker> wbk = mozilla::intl::WordBreaker::Create();
+  nsString fragText(u"\u0e40\u0e1b\u0e47\u0e19\u0e19\u0e31\u0e01");
+
+  int32_t offset = 0;
+  while (offset != NS_WORDBREAKER_NEED_MORE_TEXT) {
+    int32_t newOffset =
+        wbk->NextWord(fragText.get(), fragText.Length(), offset);
+    ASSERT_NE(offset, newOffset);
+    offset = newOffset;
+  }
+  ASSERT_TRUE(true);
+}
+
 TEST(LineBreak, WordBreakUsage)
 {
   TestPrintWordWithBreak();
@@ -265,4 +279,5 @@ TEST(LineBreak, WordBreakUsage)
   TestFindWordBreakFromPosition(3, 8, "ernationalization");
   TestFindWordBreakFromPosition(4, 6, " ");
   TestFindWordBreakFromPosition(4, 7, "work");
+  TestNextWordBreakWithComplexLanguage();
 }
